[package]
name = "winit-test"
version = "0.1.0"
edition = "2024"

[dependencies]
softbuffer = "0.4.6"
winit = { version = "0.30.12", features = ["rwh_06", "x11", "wayland"] }
glow = "0.16.0"
glutin-winit = "0.5.0"
glutin = "0.32.3"
raw-window-handle = "0.5.0"

egui = "0.33.0"
egui-winit = "0.33.0"
eframe = "0.33.0"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_glow = "0.33.0"
